bugfix: home notion padding-right on mobile

--- a/styles/components/home.module.css
+++ b/styles/components/home.module.css
@@ -137,27 +137,6 @@
   z-index: 2;
 }
 
-/* Mobile Styles */
-@media (max-width: 768px) {
-  .heroContainer {
-    aspect-ratio: unset;
-    height: calc(100vh - 88px - 2.5rem); /* Full height minus TopNav and margin */
-    max-width: 100%;
-  }
-  
-  .heroOverlay {
-    padding: 1.5rem;
-  }
-
-  .heroTextShadow {
-    bottom: -10rem; 
-    right: -20rem;
-    width: 250%; 
-    height: 250%; 
-    filter: blur(3rem); 
-  }
-}
-
 .homeNotionContainer {
   display: flex;
   flex-direction: column;
@@ -321,3 +300,27 @@
   text-align: center;
 }
 
+
+/* Mobile Styles */
+@media (max-width: 768px) {
+  .heroContainer {
+    aspect-ratio: unset;
+    height: calc(100vh - 88px - 2.5rem); /* Full height minus TopNav and margin */
+    max-width: 100%;
+  }
+  
+  .heroOverlay {
+    padding: 1.5rem;
+  }
+
+  .heroTextShadow {
+    bottom: -10rem; 
+    right: -20rem;
+    width: 250%; 
+    height: 250%; 
+    filter: blur(3rem); 
+  }
+  .homeNotionContainer {
+    padding-right: 0;
+  }
+}
